syntax = "proto3";

package io.netifi.proteus.admin.om;

option java_package = "io.netifi.proteus.admin.om";
option java_outer_classname = "ProteusAdmin";
option java_multiple_files = true;

message GroupInfo {
    string name     = 1;
    int64 accountId = 2;
    int32 size      = 3;
}

message Notice {
    string title = 1;
    string link  = 2;
}

message Connection {
   string source           = 1;
   string target           = 2;
   Metrics metrics         = 3;
   repeated Notice notices = 4;
}

message Connections {
    repeated Connection connections  = 1;
    repeated string metadata         = 2;
    string class                     = 3;
}

message Node {
    string renderer                = 1;
    string name                    = 2;
    string entryNode               = 3;
    double maxVolume               = 4;
    string class                   = 5;
    int64 updated                  = 6;
    repeated Node nodes            = 7;
    repeated Connection connection = 8;
    string displayName             = 9;
    repeated string metadata       = 10;
    Metrics metrics                = 11;
}

message Metrics {
    double normal                  = 1;
    double danger                  = 2;
    double warning                 = 3;
}

